# GTSCalib

./: .gitignore  README.md  README_cn.md  calibration_node.py  common.py  experiment.py  realsensed435i_driver.py  requirements.txt  target_segmentation.py
config/: ACSC.yaml  Horizon-exp1.yaml  Mid70-exp1.yaml  Mid70-exp2.yaml  Mid70-sim1.yaml  RCLC.yaml  config.yaml  horizon.yaml  mid70.yaml
config/developer/: developer.yaml  lidar.yaml
data/: sensor-template.yaml
docker/: README.md
docs/: Awesome Calibration.md  Awesome Extrinsic Calibration for LiDAR and Camera.md  Datasets.md  Getting Started.md  Introduction.md  README.md  Supplementary Material.md  _navbar.md  _sidebar.md  index.html
docs/_static/css/: sidebar.css
simulation/: append_intensity_to_pc.py
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/: CMakeLists.txt  package.xml
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/launch/: avia_camera_calibration.launch  horizon_camera_calibration.launch  mid40_camera_calibration.launch  mid70_camera_calibration.launch
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/rviz/: avia_camera.rviz  mid70_camera.rviz
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/src/: livox_points_plugin.cpp
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/urdf/: avia_camera.urdf.xacro  horizon_camera.urdf.xacro  mid40_camera.urdf.xacro  mid70_camera.urdf.xacro
simulation/livox_simulation/src/livox_camera_simulator/livox_laser_simulation/worlds/: calibration.world
ui/: IRCal.rviz  data_collection.yaml  data_collectiton.py  img_chessboard_ui.py  main_ui.py  main_ui.ui  rviz_ui.py  timer_message_box.py  ui.py  utils.py
(+4 files in other folders)
