<?xml version="1.0"?>
<package format="2">
  <name>livox_laser_simulation</name>
  <version>0.0.0</version>
  <description>The livox_laser_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lfc@todo.todo">lfc</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>

</package>
